--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
       "ecmaVersion": 2020
     },
     "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ],
       "vue/multi-word-component-names": "off"
     }
   },
